--- a/index.html
+++ b/index.html
@@ -47,11 +47,23 @@
 
   <!-- Conteúdo da Página -->
   <div class"container">
-		<h1>Conteúdo </h1
-  
-  
-  
-  
+		<table class="table">
+			<thead class="thead-dark">
+				<tr>
+					<tr scope="col">CODIGO DO PRODUTO</tr>
+					<tr scope="col">NOME DO PRODUTO</tr>
+					<tr scope="col">CODIGO FORNECEDOR</tr>
+					<tr scope="col">COD PROD NO FORNECEDOR</tr>
+					<tr scope="col">UNIDADE</tr>
+					<tr scope="col">VALOR UNIT</tr>
+					<tr scope="col">QTD MINI P COMPRAS</tr>
+					<tr scope="col">PERIODO FATURAMENTO</tr>
+					<tr scope="col">TEMPO TRANSPORTE ESTIMADO</tr>
+					<tr scope="col">CONDICAO DE PGTO</tr>
+					<tr scope="col">OBS PARA COMPRA</tr>
+				</tr>
+			</div>
+		</div>  
   </div>
 
   <!-- Diretório onde está Bootstrap core JavaScript -->
