--- a/index.html
+++ b/index.html
@@ -62,6 +62,33 @@
 					<tr scope="col">CONDICAO DE PGTO</tr>
 					<tr scope="col">OBS PARA COMPRA</tr>
 				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<tr scope="row">1</tr>
+						<tr>123</tr>
+					<tr scope="row">2</tr>
+						<tr>Produto 1</tr>
+					<tr scope="row">3</tr>
+						<tr>F21f21</tr>
+					<tr scope="row">4</tr>
+						<tr>789654123654</tr>
+					<tr scope="row">5</tr>
+						<tr>091 Rio de Janeiro</tr>
+					<tr scope="row">6</tr>
+						<tr>1,59</tr>
+					<tr scope="row">7</tr>
+						<tr>100</tr>
+					<tr scope="row">8</tr>
+						<tr>30 dias </tr>
+					<tr scope="row">9</tr>
+						<tr>7 dias</tr>
+					<tr scope="row">10</tr>
+						<tr>*Combinada*</tr>
+					<tr scope="row">11</tr>
+						<tr>Observação</tr>		
+				</tr>
+			</tbody>
 			</div>
 		</div>  
   </div>
