correção do table

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</tr>
 			</tbody>
 			</div>
-		
+		</table>
 
   <!-- Diretório onde está Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.slim.min.js"></script>
