--- a/index.html
+++ b/index.html
@@ -50,43 +50,43 @@
 		<table class="table">
 			<thead class="thead-dark">
 				<tr>
-					<tr scope="col">CODIGO DO PRODUTO</tr>
-					<tr scope="col">NOME DO PRODUTO</tr>
-					<tr scope="col">CODIGO FORNECEDOR</tr>
-					<tr scope="col">COD PROD NO FORNECEDOR</tr>
-					<tr scope="col">UNIDADE</tr>
-					<tr scope="col">VALOR UNIT</tr>
-					<tr scope="col">QTD MINI P COMPRAS</tr>
-					<tr scope="col">PERIODO FATURAMENTO</tr>
-					<tr scope="col">TEMPO TRANSPORTE ESTIMADO</tr>
-					<tr scope="col">CONDICAO DE PGTO</tr>
-					<tr scope="col">OBS PARA COMPRA</tr>
+					<th scope="col">CODIGO DO PRODUTO</th>
+					<th scope="col">NOME DO PRODUTO</th>
+					<th scope="col">CODIGO FORNECEDOR</th>
+					<th scope="col">COD PROD NO FORNECEDOR</th>
+					<th scope="col">UNIDADE</th>
+					<th scope="col">VALOR UNIT</th>
+					<th scope="col">QTD MINI P COMPRAS</th>
+					<th scope="col">PERIODO FATURAMENTO</th>
+					<th scope="col">TEMPO TRANSPORTE ESTIMADO</th>
+					<th scope="col">CONDICAO DE PGTO</th>
+					<th scope="col">OBS PARA COMPRA</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<tr scope="row">1</tr>
-						<tr>123</tr>
-					<tr scope="row">2</tr>
-						<tr>Produto 1</tr>
-					<tr scope="row">3</tr>
-						<tr>F21f21</tr>
-					<tr scope="row">4</tr>
-						<tr>789654123654</tr>
-					<tr scope="row">5</tr>
-						<tr>091 Rio de Janeiro</tr>
-					<tr scope="row">6</tr>
-						<tr>1,59</tr>
-					<tr scope="row">7</tr>
-						<tr>100</tr>
-					<tr scope="row">8</tr>
-						<tr>30 dias </tr>
-					<tr scope="row">9</tr>
-						<tr>7 dias</tr>
-					<tr scope="row">10</tr>
-						<tr>*Combinada*</tr>
-					<tr scope="row">11</tr>
-						<tr>Observação</tr>		
+					<th scope="row">1</th>
+						<td>123</td>
+					<th scope="row">2</th>
+						<td>Produto 1</td>
+					<th scope="row">3</th>
+						<td>F21f21</td>
+					<th scope="row">4</th>
+						<td>789654123654</td>
+					<th scope="row">5</th>
+						<td>091 Rio de Janeiro</td>
+					<th scope="row">6</th>
+						<td>1,59</td>
+					<th scope="row">7</th>
+						<td>100</td>
+					<th scope="row">8</th>
+						<td>30 dias </td>
+					<th scope="row">9</th>
+						<td>7 dias</td>
+					<th scope="row">10</th>
+						<td>*Combinada*</td>
+					<th scope="row">11</th>
+						<td>Observação</td>		
 				</tr>
 			</tbody>
 		</table>
