--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">Primeiro</th>
-      <th scope="col">Último</th>
-      <th scope="col">Nickname</th>
+      <th scope="col">CODIGO DO PRODUTO</th>
+      <th scope="col">NOME DO PRODUTO</th>
+      <th scope="col">CODIGO FORNECEDOR</th>
+      <th scope="col">CODIGO PROD NO FORNECEDOR</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td>123</td>
+      <td>Produto 1/td>
+      <td>f21f21f</td>
     </tr>
     <tr>
       <th scope="row">2</th>
