--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
 		<div class="embed-responsive embed-responsive-16by9">
              <iframe class="embed-responsive-item" src="https://drive.google.com/file/d/1zFX3_K6kKSW-Agri4K1k2Z-U8GRzRI4U/view?usp=sharing" allowfullscreen></iframe>
         </div>
+		
+		
 
-  <!-- Diretório onde está Bootstrap core JavaScript -->
+  <!-- Diretório onde está Bootstrap core JavaScript ooooo -->
   <script src="vendor/jquery/jquery.slim.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
