--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
   <!-- Conteúdo da Página -->
 
 		<div class="embed-responsive embed-responsive-16by9">
-             <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=EG1xNwBWFzw" allowfullscreen></iframe>
-        </div>
-		
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+</div>
 		
 
   <!-- Diretório onde está Bootstrap core JavaScript ooooo -->
