--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         ...
 		
 		<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=EG1xNwBWFzw&t=4s" allowfullscreen></iframe>
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
 </div>
       </div>
       <div class="modal-footer">
