--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
       <div class="modal-body">
         ...
 		
-		<div class="embed-responsive embed-responsive-16by9">
-  <iframe class="embed-responsive-item" src="https://youtu.be/ma0Xk_qutFM" allowfullscreen></iframe>
-</div>
+		<iframe width="1280" height="721" src="https://www.youtube.com/embed/ma0Xk_qutFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
