--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="modal-body">
         ...
 		
-		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ma0Xk_qutFM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ma0Xk_qutFM" allowfullscreen></iframe>
 		
       </div>
       <div class="modal-footer">
