--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Primeiro</th>
-      <th scope="col">Último</th>
-      <th scope="col">Nickname</th>
+      <th scope="col">Campo correspondente</th>
+      <th scope="col">Tamanho</th>
+      <th scope="col">Formato</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
+      <td>Correspondente ao "Código do Produto"</td>
       <td>Otto</td>
       <td>@mdo</td>
     </tr>
