--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <tr>
       <th scope="row">1</th>
       <td>Correspondente ao "Código do Produto"</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td>15</td>
+      <td>Alfa-numérico</td>
     </tr>
     <tr>
       <th scope="row">2</th>
